force-app/main/default/objects/Send_to_4Gov_Email_Setting__mdt/Send_to_4Gov_Email_Setting__mdt.object-meta.xml
<CustomObject>
    <description>PacPoint-CZ101919 - Created for 4GOV phase 1</description>
    <label>Send to 4Gov Email Setting</label>
    <pluralLabel>Send to 4Gov Email Settings</pluralLabel>
</CustomObject>