force-app/main/default/objects/Send_to_4Gov_Email_Setting__mdt/fields/Reply_To_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Reply_To_Email_Address__c</fullName>
    <label>Reply To Email Address</label>
    <type>TextArea</type>
</CustomField>