force-app/main/default/objects/Send_to_4Gov_Email_Setting__mdt/fields/Sender_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Sender_Display_Name__c</fullName>
    <description>PacPoint-CZ101919 - Created for 4GOV phase 1</description>
    <label>Sender Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>