force-app/main/default/objects/Send_to_4Gov_Email_Setting__mdt/fields/To_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>To_Email_Addresses__c</fullName>
    <description>PacPoint-CZ101919 - Created for 4GOV phase 1</description>
    <label>To Email Addresses</label>
    <type>TextArea</type>
</CustomField>